# soundworm

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
.github/workflows/: ci.yml
config/rules/: default.toml
config/scripts/: routing.rhai
contrib/systemd/: soundworm.service
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: link.rs  list.rs  metrics.rs  mod.rs  snapshot.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  error.rs  event.rs  lib.rs  link.rs  node.rs  port.rs
crates/coreaudio-backend/: Cargo.toml
crates/coreaudio-backend/src/: lib.rs  macos.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ipc_server.rs  main.rs  state.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs  mock.rs
crates/graph/tests/: mock_backend.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  codec.rs  lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  metrics.rs  xrun.rs
crates/pipewire-backend/: Cargo.toml
crates/pipewire-backend/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: conflict.rs  lib.rs  rules.rs  session.rs
crates/policy/tests/: parse_props.rs
crates/rhai-engine/: Cargo.toml
crates/rhai-engine/src/: lib.rs
crates/rhai-engine/tests/: parse_props.rs
crates/snapshots/: Cargo.toml
crates/snapshots/src/: lib.rs
crates/ui/: Cargo.toml  README.md  tauri.conf.json
crates/ui/frontend/: index.html  package-lock.json  package.json  vite.config.js
crates/ui/frontend/src/: App.svelte  EditorPane.svelte  MetricsNode.svelte  layout.js  swd.js
crates/ui/src/: main.rs
crates/wasapi-backend/: Cargo.toml
crates/wasapi-backend/src/: lib.rs
docs/: IPC.md  index.html
