[workspace]
members = [
    "crates/core",
    "crates/graph",
    "crates/policy",
    "crates/pipewire-backend",
    "crates/coreaudio-backend",
    "crates/wasapi-backend",
    "crates/rhai-engine",
    "crates/snapshots",
    "crates/observability",
    "crates/cli",
    "crates/daemon",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
rhai               = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "1"
async-trait        = "0.1"
