[workspace]
members = [
    "crates/core",
    "crates/graph",
    "crates/policy",
    "crates/pipewire-backend",
    "crates/coreaudio-backend",
    "crates/wasapi-backend",
    "crates/rhai-engine",
    "crates/snapshots",
    "crates/observability",
    "crates/ipc",
    "crates/cli",
    "crates/daemon",
]
exclude = ["crates/ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrokImageCompression/soundworm"
authors = ["Aaron Boxer"]

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
rhai               = { version = "1", features = ["sync"] }
notify             = "6"
hdrhistogram       = { version = "7", default-features = false }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "1"
async-trait        = "0.1"
proptest           = "1"
