[package]
name    = "soundworm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sw: command-line client for the soundworm audio router."

[[bin]]
name = "sw"
path = "src/main.rs"

[dependencies]
soundworm-core          = { path = "../core" }
soundworm-graph         = { path = "../graph" }
soundworm-policy        = { path = "../policy" }
soundworm-observability = { path = "../observability" }
soundworm-snapshots     = { path = "../snapshots" }
soundworm-ipc           = { path = "../ipc" }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
comfy-table        = "7"
serde_json         = { workspace = true }

# `--in-process` flag bypasses the daemon and talks to the local
# backend directly. Linux-only by design — on macOS/Windows the daemon
# is always required.
[target.'cfg(target_os = "linux")'.dependencies]
soundworm-pipewire = { path = "../pipewire-backend" }
