[package]
name    = "soundworm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types for soundworm: nodes, ports, links, the AudioBackend trait, and the error model."
keywords = ["audio", "routing", "pipewire"]
categories = ["multimedia::audio"]

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
