[package]
name    = "soundworm-coreaudio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CoreAudio backend for soundworm (macOS)."

[dependencies]
soundworm-core = { path = "../core" }
async-trait    = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }

# Real HAL bindings only on macOS. On other targets the backend is a
# stub that returns errors — daemon selects backends per-target so this
# code only runs on macOS in practice.
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
