[package]
name    = "soundworm-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "In-memory audio graph model for soundworm, updated from backend events."

[dependencies]
soundworm-core = { path = "../core" }
serde          = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
async-trait    = { workspace = true }
