[package]
name    = "soundworm-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
soundworm-core = { path = "../core" }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
