[package]
name    = "soundworm-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire protocol and NDJSON client for the soundworm daemon (swd) socket."

[dependencies]
soundworm-core = { path = "../core" }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
