[package]
name    = "soundworm-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Xrun and latency metrics for soundworm, with an optional Prometheus exporter."

[features]
default    = []
prometheus = []

[dependencies]
soundworm-core = { path = "../core" }
serde          = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
hdrhistogram   = { workspace = true }
