[package]
name    = "soundworm-pipewire"
version = "0.1.0"
edition = "2021"

[dependencies]
soundworm-core = { path = "../core" }
async-trait    = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
pipewire       = "0.10"
