[package]
name    = "soundworm-pipewire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PipeWire backend for soundworm (Linux)."

[dependencies]
soundworm-core = { path = "../core" }
async-trait    = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
pipewire       = "0.10"
