[package]
name    = "soundworm-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TOML routing rules engine for soundworm."

[dependencies]
soundworm-core = { path = "../core" }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }

[dev-dependencies]
proptest       = { workspace = true }
