[package]
name    = "soundworm-rhai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rhai scripting engine for soundworm routing decisions."

[dependencies]
soundworm-core = { path = "../core" }
rhai           = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
proptest       = { workspace = true }
