[package]
name    = "soundworm-snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Session save and restore for soundworm audio routing."

[dependencies]
soundworm-core   = { path = "../core" }
soundworm-policy = { path = "../policy" }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tokio            = { workspace = true }
